infrastructure/k8s/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: consul
spec:
  ingressClassName: nginx
  rules:
  - host: consul.lirondadon.link
    http:
      paths:
      - backend:
          service:
            name: consul-ui
            port:
              number: 80
        path: /
        pathType: Prefix
